     directory to detect leaking tests.
     (Vincent Ladeuil, #147986)

   * The basename, not the full path, is now used when checking whether
     the profiling dump file begins with ``callgrind.out`` or not. This
     fixes a bug reported by Aaron Bentley on IRC. (Ian Clatworthy)

   * Trivial fix for invoking command ``reconfigure`` without arguments.
     (Rob Weir, #141629)

   * Unicode-safe output from ``bzr info``. (Lukáš Lalinský, #151844)

   * ``WorkingTree.rename_one`` will now raise an error if normalisation of the
     new path causes bzr to be unable to access the file. (Robert Collins)

   * Correctly detect a NoSuchFile when using a filezilla server. (Gary van der
     Merwe)

  API BREAKS:

   * ``CommitBuilder.record_entry_contents`` now requires the root entry of a
     tree be supplied to it, previously failing to do so would trigger a
     deprecation warning. (Robert Collins)

   * ``KnitVersionedFile.add*`` will no longer cache added records even when
     enable_cache() has been called - the caching feature is now exclusively for
     reading existing data. (Robert Collins)

   * ``ReadOnlyLockError`` is deprecated; ``LockFailed`` is usually more 
     appropriate.  (Martin Pool)

   * Removed ``bzrlib.transport.TransportLogger`` - please see the new
     ``trace+`` transport instead. (Robert Collins)

   * Removed previously deprecated varargs interface to ``TestCase.run_bzr`` and
     deprecated methods ``TestCase.capture`` and ``TestCase.run_bzr_captured``.
     (Martin Pool)

   * Removed previous deprecated ``basis_knit`` parameter to the
     ``KnitVersionedFile`` constructor. (Robert Collins)

   * Special purpose method ``TestCase.run_bzr_decode`` is moved to the test_non_ascii 
     class that needs it.
     (Martin Pool)

   * The class ``bzrlib.repofmt.knitrepo.KnitRepository3`` has been folded into
     ``KnitRepository`` by parameters to the constructor. (Robert Collins)
